cmake_minimum_required(VERSION 3.6)
project(fork_exec)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wpedantic")
set(SRC_BASIC basic.c)
set(SRC_SHARE share.c)
set(SRC_SHELL shell.cpp)
add_executable(basic ${SRC_BASIC})
add_executable(share ${SRC_SHARE})
add_executable(shell ${SRC_SHELL})
